Fix: Removed z-index property in the Footer
Now the links can to open

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -15,7 +15,6 @@ footer {
   position: relative;
   bottom: 0;
   position: relative;
-  z-index: -1;
 }
 
 .github-logo {
